# wispa

./: LICENSE  README.md  config.toml  pyproject.toml
wispa/: appcontext.py  cleaner.py  config.py  hotkey.py  injector.py  main.py  overlay.py  recorder.py  transcriber.py
