[project]
name = "wispa"
version = "0.1.0"
description = "Local Wispr Flow clone: hold-Fn push-to-talk dictation with on-device ASR, LLM cleanup, and Accessibility API text insertion"
requires-python = ">=3.12,<3.13"
dependencies = [
    "parakeet-mlx>=0.3",
    "sounddevice>=0.5",
    "soundfile>=0.12",
    "numpy",
    "numba>=0.60",
    "ollama>=0.4",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
]

[project.scripts]
wispa = "wispa.main:run"

# Anaconda's Python (which otherwise wins the 3.12 lookup on this machine)
# ignores editable-install .pth files, breaking `uv run wispa`
[tool.uv]
python-preference = "only-managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wispa"]
